--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
           cache: npm
-          cache-dependency-path: '**/package.json'
+          cache-dependency-path: "**/package.json"
       - run: npm install
       - run: npm run bootstrap
       - run: npm run publish:ci
@@ -40,11 +40,11 @@ jobs:
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build Container
         run: |
-            docker build \
-              --build-arg IONIC_CLI_VERSION=$(npm info @ionic/cli dist-tags.latest) \
-              --tag ghcr.io/${{ github.repository }}:latest \
-              --tag ghcr.io/${{ github.repository}}:$(npm info @ionic/cli dist-tags.latest) \
-              .
+          docker build \
+            --build-arg IONIC_CLI_VERSION=$(npm info @ionic/cli dist-tags.latest) \
+            --tag ghcr.io/${{ github.repository }}:latest \
+            --tag ghcr.io/${{ github.repository}}:$(npm info @ionic/cli dist-tags.latest) \
+            .
       - name: Push Container as latest
         run: docker push ghcr.io/${{ github.repository }}:latest
       - name: Push Container as version
